--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,37 @@
     --details: #2fbf71 ;
 }
 
+#headerh {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 70px;
+    background: var(--backgroind-main);
+    color: var(--txt-color);
+    font-family: "Rubik", sans-serif;
+    z-index: 3;
+}
+
+#headerh div {
+    width: 90%;
+    display: flex;
+    margin: 0 auto;
+    justify-content: space-between;
+    align-items: center;
+}
+
+label[for='botaomenu'] {
+    cursor: pointer;
+    background: var(--details);
+    font-size: 30px;
+    color: var(--txt-color);
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #headerv {
     position: fixed;
     width: 250px;
@@ -22,6 +53,7 @@
     background: var(--background-header);
     color: var(--txt-color);
     font-family: "Rubik", sans-serif;
+    display: none;
 }
 
 #profile {
@@ -99,10 +131,74 @@ main {
     height: auto;
     color: var(--txt-color);
     font-family: "Rubik", sans-serif;
+   
+}
+
+section> a {
+    text-decoration: none;
+    color: var(--txt-color);
+    display: flex;
+    width: 160px;
+    background: var(--details);
+    box-shadow: 3px 3px 8px var(--txt-color);
+    justify-content: center;
+    padding: 10px 20px;
 }
 
 section #sectioninicio {
     width: 90%;
     margin: 0 auto;
     height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 } 
+
+section #sectioninicio > div {
+    width: 49%;
+    min-width: 300px;
+}
+section #sectioninicio > h1 {
+    font-size: 65px;
+    margin-bottom: 20px;
+}
+
+section #sectioninicio > h2 {
+    font-size: 25px;
+    font-weight: normal;
+    margin-bottom: 20px;
+}
+
+section #sectioninicio > p {
+    font-size: 18px;
+    font-weight: lighter;
+    margin-bottom: 20px;
+    line-height: 1.7;
+    text-align: justify;
+}
+
+
+section #sectioninicio > img {
+    width: 100%;
+    border-radius: 50%;
+    border: 2px solid var(--txt-color);
+}
+
+@media (max-width: 1200px) {
+    #headerh {
+        display: flex;
+    }
+
+    #headerv {
+        margin-left: -250px;
+        transition: all 0.4s;
+    }
+
+    main {
+        margin-left: 0;
+        margin-top: 70px;
+    }
+    #botao-menu:checked ~ #headerv {
+        margin-left: 0;
+    }
+}
