--- a/css/style.css
+++ b/css/style.css
@@ -279,36 +279,55 @@ section#servico h2 {
     font-weight: bolder;
 }
 
+section#portifolio #portifoliograde {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    border: 1px solid red ;
+}
+
 #portifoliocardimg {
     position: relative;
-    width: 500px;
+    width: 40%;
+    min-width: 202px;
     height: 250px;
+    margin-bottom: 100px;
 }
 
-#portifoliocardimg> div:first-child {
-   overflow: hidden;
-}
-
-#portifoliocardimg img {
+.overflow {
     width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.overflow>div {
+    height: 100%;
+}
+
+.overflow.div:hover {
     transform: scale(1.1);
 }
 
-#portifoliocardimg:hover img {
-    transform: scale(1.1);
+.overflow #img1 {
+    background: url(../img/tba.png) no-repeat center center/cover;
 }
 
-#portifoliocardtitulo {
+section#portifolio #portifoliocardtitulo {
     position: absolute;
+    width: 90%;
+    height: 150px;
     background: var(--background-header);
-    width: 300px;
-    height: 200px ;
-    bottom: -30%;
     right: 0;
     padding: 20px;
-    line-height: 200px;
 }
 
+#portifoliocardtitulo p {
+    font-size: 12;
+}
+
+#portifoliocardtitulo p:last-child {
+    font-weight: bolder;
+}
 
 
 @media (max-width: 1200px) {
@@ -361,5 +380,10 @@ section#servico h2 {
 
     section#servico .card {
         width: 100%;
+    }
+
+    #portifoliocardimg {
+        width: 100%;
+        margin-bottom: 250px;
     }
 }
