--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ section#portifolio #portifoliograde {
     height: 100%;
 }
 
-.overflow.div:hover {
+.overflow>div:hover {
     transform: scale(1.1);
 }
 
@@ -327,6 +327,52 @@ section#portifolio #portifoliocardtitulo {
 
 #portifoliocardtitulo p:last-child {
     font-weight: bolder;
+}
+
+section#contato p:last-child {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+section#contato #contatoform>div {
+    width: 49%;
+    min-height: 300px;
+    background: var(--background-header);
+    padding: 40px;
+    margin-bottom: 20px;
+}
+
+section#contato #contatotxt {
+    display: flex;
+    align-items: center;
+}
+
+section#contato #contatotxt p {
+    margin: auto  0;
+}
+
+section#contato input {
+    background: none;
+    border: 1px solid var(--txt-color);
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+section#contato #inputnome, #inputemail {
+    width: 49%;
+}
+
+section#contato #inputassunto {
+    width: 49%;
+}
+
+section#contato textarea {
+    background: none;
+    border: 1px solid var(--txt-color);
+    width: 100%;
+    height: 100px;
+    padding:10px ;
 }
 
 
