--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ section a {
     display: flex;
     width: 160px;
     background: var(--details);
-    box-shadow: 3px 3px 8px var(--txt-color);
+    box-shadow: 3px 3px 0px var(--txt-color);
     justify-content: center;
     padding: 10px 20px;
 }
@@ -174,6 +174,11 @@ section h2 {
     font-size: 25px;
     font-weight: normal;
     margin-bottom: 20px; 
+    padding: 20px 0;
+}
+
+section h3 {
+    margin-bottom: 30px;
 }
 
 section#sectioninicio {
@@ -311,6 +316,18 @@ section#portifolio #portifoliograde {
     background: url(../img/tba.png) no-repeat center center/cover;
 }
 
+.overflow #img2 {
+    background: url(../img/atv2.png) no-repeat center center/cover;
+}
+
+.overflow #img3 {
+    background: url(../img/atv3.png) no-repeat center center/cover;
+}
+
+.overflow #img4 {
+    background: url(../img/tba.png) no-repeat center center/cover;
+}
+
 section#portifolio #portifoliocardimg #portifoliocardtitulo {
     margin-top: -30%;
 }
@@ -330,49 +347,52 @@ section#portifolio #portifoliocardtitulo {
 
 
 
-section#contato p:last-child {
+section#contato #contatorow {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
-section#contato #contatoform>div {
+section#contato #contatorow>div {
     width: 49%;
-    min-height: 300px;
+    min-width:300px ;
     background: var(--background-header);
     padding: 40px;
     margin-bottom: 20px;
 }
 
-section#contato #contatotxt {
+section#contato #contatotxt div {
     display: flex;
     align-items: center;
 }
 
-section#contato #contatotxt p {
-    margin: auto  0;
+section#contato #contatotxt div p {
+    margin: auto 10px  0;
+    display: flex;
+    align-items: center;
 }
 
 section#contato input {
-    background: none;
     border: 1px solid var(--txt-color);
     margin-bottom: 10px;
     padding: 10px;
 }
 
-section#contato 
+#contatoform div {
+    display: flex;
+    justify-content: space-between;
+} 
 
 section#contato #inputnome, #inputemail {
     width: 49%;
 }
 
 section#contato #inputassunto {
-    width: 49%;
+    width: 100%;
 }
 
 section#contato textarea {
-    background: none;
-    border: 1px solid var(--txt-color);
+    border: 1px solid aquamarine;
     width: 100%;
     height: 100px;
     padding:10px ;
@@ -433,6 +453,10 @@ section#contato textarea {
 
     #portifoliocardimg {
         width: 100%;
-        margin-bottom: 250px;
+        margin-bottom: 200px;
+    }
+    section3contato #contatoform>div {
+        width: 100%;
+        min-width: 300px;
     }
 }
